overall draft of the website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,115 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-   
+   <header id="header">
+    <div id="logo">
+        <p>Avochairs</p>
+    </div>
+    <nav id="navigation">
+        <button>cart</button>
+        <button>cart</button>
+        <button>cart</button>
+        <button>cart</button>
+    </nav>
+   </header>
+   <section id="about-section">
+    <div class="about" id="about-one">
+        <div class="about-description">
+            <h2>
+                Modern Interior<br>
+                Avocado Armchairs
+            </h2>
+            <p>
+                We made armchairs with passion since 1999
+            </p>
+            <a href="">Shop Now</a>
+        </div>
+        <div class="about-image">
+            <img src="images/product_2.png" alt="Avocado armchair">
+        </div>
+    </div>
+    <div class="about" id="about-two">
+        <div class="about-image">
+            <img src="images/product_5.png" alt="Avocado armchair">
+        </div>
+        <div class="about-description">
+            <h2>
+                Modern Interior<br>
+                Avocado Armchairs
+            </h2>
+            <p>
+                We made armchairs with passion since 1999
+            </p>
+            <a href="">Shop Now</a>
+        </div>
+    </div>
+    <div class="about" id="about-three">
+        <div class="about-description">
+            <h2>
+                Modern Interior<br>
+                Avocado Armchairs
+            </h2>
+            <p>
+                We made armchairs with passion since 1999
+            </p>
+            <a href="">Shop Now</a>
+        </div>
+        <div class="about-image">
+            <img src="images/product_3.png" alt="Avocado armchair">
+        </div>
+    </div>
+    
+   </section>
+   <section id="products">
+    <div class="product">
+        <img class="product-img" src="images/product_9.png" alt="armchair photo">
+        <p class="product-name">Avocado armchair</p>
+        <p class="product-price">699$</p>
+        <button class="product-add">Add to cart</button>
+    </div>
+    <div class="product">
+        <img class="product-img" src="images/product_7.png" alt="armchair photo">
+        <p class="product-name">Avocado armchair</p>
+        <p class="product-price">699$</p>
+        <button class="product-add">Add to cart</button>
+    </div>
+    <div class="product">
+        <img class="product-img" src="images/product_6.png" alt="armchair photo">
+        <p class="product-name">Avocado armchair</p>
+        <p class="product-price">699$</p>
+        <button class="product-add">Add to cart</button>
+    </div>
+    <div class="product">
+        <img class="product-img" src="images/product_5.png" alt="armchair photo">
+        <p class="product-name">Avocado armchair</p>
+        <p class="product-price">699$</p>
+        <button class="product-add">Add to cart</button>
+    </div>
+    <div class="product">
+        <img class="product-img" src="images/product_4.png" alt="armchair photo">
+        <p class="product-name">Avocado armchair</p>
+        <p class="product-price">699$</p>
+        <button class="product-add">Add to cart</button>
+    </div>
+    <div class="product">
+        <img class="product-img" src="images/product_3.png" alt="armchair photo">
+        <p class="product-name">Avocado armchair</p>
+        <p class="product-price">699$</p>
+        <button class="product-add">Add to cart</button>
+    </div>
+    <div class="product">
+        <img class="product-img" src="images/product_2.png" alt="armchair photo">
+        <p class="product-name">Avocado armchair</p>
+        <p class="product-price">699$</p>
+        <button class="product-add">Add to cart</button>
+    </div>
+    <div class="product">
+        <img class="product-img" src="images/product_1.png" alt="armchair photo">
+        <p class="product-name">Avocado armchair</p>
+        <p class="product-price">699$</p>
+        <button class="product-add">Add to cart</button>
+    </div>
+   </section>
+   <footer></footer>
 </body>
 </html>
