--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avochairs</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rokkitt:ital@1&family=Rubik:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -14,9 +17,9 @@
         <p>Avochairs</p>
     </div>
     <nav id="navigation">
-        <button>cart</button>
-        <button>cart</button>
-        <button>cart</button>
+        <button>about</button>
+        <button>quality</button>
+        <button>shop</button>
         <button>cart</button>
     </nav>
    </header>
@@ -30,7 +33,7 @@
             <p>
                 We made armchairs with passion since 1999
             </p>
-            <a href="">Shop Now</a>
+            <button>Shop now</button>
         </div>
         <div class="about-image">
             <img src="images/product_2.png" alt="Avocado armchair">
@@ -48,7 +51,7 @@
             <p>
                 We made armchairs with passion since 1999
             </p>
-            <a href="">Shop Now</a>
+            <button>Shop now</button>
         </div>
     </div>
     <div class="about" id="about-three">
@@ -60,7 +63,7 @@
             <p>
                 We made armchairs with passion since 1999
             </p>
-            <a href="">Shop Now</a>
+            <button>Shop now</button>
         </div>
         <div class="about-image">
             <img src="images/product_3.png" alt="Avocado armchair">
@@ -73,49 +76,49 @@
         <img class="product-img" src="images/product_9.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
         <p class="product-price">699$</p>
-        <button class="product-add">Add to cart</button>
+        <!-- <button class="product-add">Add to cart</button> -->
     </div>
     <div class="product">
         <img class="product-img" src="images/product_7.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
         <p class="product-price">699$</p>
-        <button class="product-add">Add to cart</button>
+        <!-- <button class="product-add">Add to cart</button> -->
     </div>
     <div class="product">
         <img class="product-img" src="images/product_6.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
         <p class="product-price">699$</p>
-        <button class="product-add">Add to cart</button>
+        <!-- <button class="product-add">Add to cart</button> -->
     </div>
     <div class="product">
         <img class="product-img" src="images/product_5.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
         <p class="product-price">699$</p>
-        <button class="product-add">Add to cart</button>
+        <!-- <button class="product-add">Add to cart</button> -->
     </div>
     <div class="product">
         <img class="product-img" src="images/product_4.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
         <p class="product-price">699$</p>
-        <button class="product-add">Add to cart</button>
+        <!-- <button class="product-add">Add to cart</button> -->
     </div>
     <div class="product">
         <img class="product-img" src="images/product_3.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
         <p class="product-price">699$</p>
-        <button class="product-add">Add to cart</button>
+        <!-- <button class="product-add">Add to cart</button> -->
     </div>
     <div class="product">
         <img class="product-img" src="images/product_2.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
         <p class="product-price">699$</p>
-        <button class="product-add">Add to cart</button>
+        <!-- <button class="product-add">Add to cart</button> -->
     </div>
     <div class="product">
         <img class="product-img" src="images/product_1.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
         <p class="product-price">699$</p>
-        <button class="product-add">Add to cart</button>
+        <!-- <button class="product-add">Add to cart</button> -->
     </div>
    </section>
    <footer></footer>
