more css styles #2

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
         <p>Avochairs</p>
     </div>
     <nav id="navigation">
-        <button>about</button>
-        <button>quality</button>
-        <button>shop</button>
-        <button>cart</button>
+        <button><a href="#products">Buy</a></button>
+        <button>Cart
+        </button>
     </nav>
    </header>
    <section id="about-section">
@@ -33,7 +32,7 @@
             <p>
                 We made armchairs with passion since 1999
             </p>
-            <button>Shop now</button>
+            <button><a href="#products">Buy</a></button>
         </div>
         <div class="about-image">
             <img src="images/product_2.png" alt="Avocado armchair">
@@ -51,7 +50,7 @@
             <p>
                 We made armchairs with passion since 1999
             </p>
-            <button>Shop now</button>
+            <button><a href="#products">Buy</a></button>
         </div>
     </div>
     <div class="about" id="about-three">
@@ -63,7 +62,7 @@
             <p>
                 We made armchairs with passion since 1999
             </p>
-            <button>Shop now</button>
+            <button><a href="#products">Buy</a></button>
         </div>
         <div class="about-image">
             <img src="images/product_3.png" alt="Avocado armchair">
@@ -75,50 +74,42 @@
     <div class="product">
         <img class="product-img" src="images/product_9.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
-        <p class="product-price">699$</p>
-        <!-- <button class="product-add">Add to cart</button> -->
+        <button class="product-price"><span>699$</span></button>
     </div>
     <div class="product">
         <img class="product-img" src="images/product_7.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
-        <p class="product-price">699$</p>
-        <!-- <button class="product-add">Add to cart</button> -->
+        <button class="product-price"><span>699$</span></button>
     </div>
     <div class="product">
         <img class="product-img" src="images/product_6.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
-        <p class="product-price">699$</p>
-        <!-- <button class="product-add">Add to cart</button> -->
+        <button class="product-price"><span>699$</span></button>
     </div>
     <div class="product">
         <img class="product-img" src="images/product_5.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
-        <p class="product-price">699$</p>
-        <!-- <button class="product-add">Add to cart</button> -->
+        <button class="product-price"><span>699$</span></button>
     </div>
     <div class="product">
         <img class="product-img" src="images/product_4.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
-        <p class="product-price">699$</p>
-        <!-- <button class="product-add">Add to cart</button> -->
+        <button class="product-price"><span>699$</span></button>
     </div>
     <div class="product">
         <img class="product-img" src="images/product_3.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
-        <p class="product-price">699$</p>
-        <!-- <button class="product-add">Add to cart</button> -->
+        <button class="product-price"><span>699$</span></button>
     </div>
     <div class="product">
         <img class="product-img" src="images/product_2.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
-        <p class="product-price">699$</p>
-        <!-- <button class="product-add">Add to cart</button> -->
+        <button class="product-price"><span>699$</span></button>
     </div>
     <div class="product">
         <img class="product-img" src="images/product_1.png" alt="armchair photo">
         <p class="product-name">Avocado armchair</p>
-        <p class="product-price">699$</p>
-        <!-- <button class="product-add">Add to cart</button> -->
+        <button class="product-price"><span>699$</span></button>
     </div>
    </section>
    <footer></footer>
