--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
    <header id="header">
     <div id="logo">
-        <p>Avochairs</p>
+        <img src="images/logo.png" alt="" loading="lazy">
     </div>
     <nav id="navigation">
-        <button><a href="#products">Buy</a></button>
+        <button><a href="#products">Shop</a></button>
         <button id="cart-button">Cart (0)</button>
     </nav>
    </header>
@@ -29,86 +29,92 @@
                 Avocado Armchairs
             </h2>
             <p>
-                We made armchairs with passion since 1999
+                Our avocado armchairs are not only comfortable and stylish, but they also add a touch of whimsy and playfulness to any room.
             </p>
-            <button><a href="#products">Buy</a></button>
+            <button><a href="#products">Shop</a></button>
         </div>
         <div class="about-image">
-            <img src="images/product_2.png" alt="Avocado armchair">
+            <img src="images/product_3.png" alt="chair" loading="lazy">
         </div>
     </div>
     <div class="about" id="about-two">
         <div class="about-image">
-            <img src="images/product_5.png" alt="Avocado armchair">
+            <img src="images/product_8.png" alt="armchair" loading="lazy">
         </div>
         <div class="about-description">
             <h2>
-                Modern Interior<br>
-                Avocado Armchairs
+                Get Comfy<br>
+                In An Avocado!
             </h2>
             <p>
-                We made armchairs with passion since 1999
+                Each armchair is meticulously crafted with premium materials to ensure that they are not only stylish and comfortable but also long-lasting.
             </p>
-            <button><a href="#products">Buy</a></button>
+            <button><a href="#products">Shop</a></button>
         </div>
     </div>
     <div class="about" id="about-three">
         <div class="about-description">
             <h2>
-                Modern Interior<br>
-                Avocado Armchairs
+                Sit Back And Relax<br>
+                In The Perfect Avocado Shape
             </h2>
             <p>
-                We made armchairs with passion since 1999
+                Why settle for boring furniture when you can add a touch of fun and playfulness to your space with our avocado armchairs?
             </p>
-            <button><a href="#products">Buy</a></button>
+            <button><a href="#products">Shop</a></button>
         </div>
         <div class="about-image">
-            <img src="images/product_3.png" alt="Avocado armchair">
+            <img src="images/product_2.png" alt="armchair">
         </div>
     </div>
     
    </section>
    <section id="products">
     <div class="product">
-        <img class="product-img" src="images/product_9.png" alt="armchair photo">
-        <p class="product-name">Avocado armchair</p>
-        <button class="product-button" data-index="1" data-name="Avocado armchair" data-price="699" data-value="0"><span>699$</span></button>
+        <img class="product-img" src="images/product_1.png" alt="armchair">
+        <p class="product-name">Green Giant Seat</p>
+        <button class="product-button" data-index="1" data-name="Avocado armchair"><span>599</span><span>$</span></button>
     </div>
     <div class="product">
-        <img class="product-img" src="images/product_7.png" alt="armchair photo">
-        <p class="product-name">Avocado armchair</p>
-        <button class="product-button" data-index="2" data-name="Avocado armchair"><span>699$</span></button>
+        <img class="product-img" src="images/product_2.png" alt="armchair">
+        <p class="product-name">Avocado Lounger</p>
+        <button class="product-button" data-index="2" data-name="Avocado armchair"><span>599</span><span>$</span></button>
     </div>
     <div class="product">
-        <img class="product-img" src="images/product_6.png" alt="armchair photo">
-        <p class="product-name">Avocado armchair</p>
-        <button class="product-button" data-index="3" data-name="Avocado armchair"><span>699$</span></button>
+        <img class="product-img" src="images/product_3.png" alt="chair">
+        <p class="product-name">Chaircado</p>
+        <button class="product-button" data-index="3" data-name="Avocado armchair"><span>899</span><span>$</span></button>
     </div>
     <div class="product">
-        <img class="product-img" src="images/product_5.png" alt="armchair photo">
-        <p class="product-name">Avocado armchair</p>
-        <button class="product-button" data-index="4" data-name="Avocado armchair"><span>699$</span></button>
+        <img class="product-img" src="images/product_4.png" alt="armchair">
+        <p class="product-name">Avocado Throne</p>
+        <button class="product-button" data-index="4" data-name="Avocado armchair"><span>899</span><span>$</span></button>
     </div>
     <div class="product">
-        <img class="product-img" src="images/product_4.png" alt="armchair photo">
-        <p class="product-name">Avocado armchair</p>
-        <button class="product-button" data-index="5" data-name="Avocado armchair"><span>699$</span></button>
+        <img class="product-img" src="images/product_5.png" alt="armchair">
+        <p class="product-name">Guacamole</p>
+        <button class="product-button" data-index="5" data-name="Avocado armchair"><span>999</span><span>$</span></button>
     </div>
     <div class="product">
-        <img class="product-img" src="images/product_3.png" alt="armchair photo">
-        <p class="product-name">Avocado armchair</p>
-        <button class="product-button" data-index="6" data-name="Avocado armchair"><span>699$</span></button>
+        <img class="product-img" src="images/product_6.png" alt="armchair">
+        <p class="product-name">Avoseat</p>
+        <button class="product-button" data-index="6" data-name="Avocado armchair"><span>699</span><span>$</span></button>
     </div>
     <div class="product">
-        <img class="product-img" src="images/product_2.png" alt="armchair photo">
-        <p class="product-name">Avocado armchair</p>
-        <button class="product-button" data-index="7" data-name="Avocado armchair"><span>699$</span></button>
+        <img class="product-img" src="images/product_7.png" alt="armchair">
+        <p class="product-name">Guac-a-Seat</p>
+        <button class="product-button" data-index="7" data-name="Avocado armchair"><span>599</span><span>$</span></button>
     </div>
     <div class="product">
-        <img class="product-img" src="images/product_1.png" alt="armchair photo">
-        <p class="product-name">Avocado armchair</p>
-        <button class="product-button" data-index="8" data-name="Avocado armchair"><span>699$</span></button>
+        <img class="product-img" src="images/product_8.png" alt="armchair">
+        <p class="product-name">AvocaChair</p>
+        <button class="product-button" data-index="8" data-name="Avocado armchair"><span>899</span><span>$</span></button>
+    </div>
+    <div id="product-added" class="hide">
+        <span>Product added to Cart!</span>
+        <button id="go-to-cart">Go to Cart</button>
+        <button id="continue-shopping">Continue Shopping</button>
+
     </div>
    </section>
    <footer></footer>
@@ -118,7 +124,7 @@
     </div>
     <div class="cart-summary">
         <span class="cart-summary-total">Total:</span>
-        <span class="cart-summary-price">699$</span>
+        <span class="cart-summary-price">0$</span>
         <button class="cart-summary-button">Buy</button>
     </div>
     
