bugs fix, media queries and Cart improvement

--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
             <img src="images/product_2.png" alt="armchair">
         </div>
     </div>
-    
    </section>
    <section id="products">
     <div class="product">
         <img class="product-img" src="images/product_1.png" alt="armchair">
         <p class="product-name">Green Giant Seat</p>
-        <button class="product-button" data-index="1" data-name="Avocado armchair"><span>599</span><span>$</span></button>
+        <button class="product-button" data-index="1" data-name="Avocado armchair">
+            <span>599</span><span>$</span>
+        </button>
     </div>
     <div class="product">
         <img class="product-img" src="images/product_2.png" alt="armchair">
@@ -114,20 +115,20 @@
         <span>Product added to Cart!</span>
         <button id="go-to-cart">Go to Cart</button>
         <button id="continue-shopping">Continue Shopping</button>
-
     </div>
    </section>
    <footer></footer>
    <div id="cart" class="hide">
     <div class="cart-exit"><button class="cart-exit-button">X</button></div>
+    <div id="up"><button id="up-button">up</button><div class="arrow">></div></div>
     <div id="cart-products">
     </div>
+    <div id="down"><button id="down-button">down</button><div class="arrow">></div></div>
     <div class="cart-summary">
         <span class="cart-summary-total">Total:</span>
         <span class="cart-summary-price">0$</span>
         <button class="cart-summary-button">Buy</button>
     </div>
-    
    </div>
 </body>
 </html>
