--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/x-icon" href="images/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Rokkitt:ital@1&family=Rubik:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/ff68fdbb23.js" crossorigin="anonymous"></script>
 </head>
 <body>
    <header id="header">
@@ -18,7 +20,7 @@
     </div>
     <nav id="navigation">
         <button><a href="#products">Shop</a></button>
-        <button id="cart-button">Cart (0)</button>
+        <button id="cart-button"> <i class="fa-sharp fa-solid fa-cart-shopping"></i> <span>(0)</span></button>
     </nav>
    </header>
    <section id="about-section">
@@ -119,11 +121,11 @@
    </section>
    <footer></footer>
    <div id="cart" class="hide">
-    <div class="cart-exit"><button class="cart-exit-button">X</button></div>
-    <div id="up"><button id="up-button">up</button><div class="arrow">></div></div>
+    <div class="cart-exit"><button class="cart-exit-button fa-solid fa-xmark"></button></div>
+    <div id="up"><button id="up-button" class="fa-solid fa-chevron-up"></button></div>
     <div id="cart-products">
     </div>
-    <div id="down"><button id="down-button">down</button><div class="arrow">></div></div>
+    <div id="down"><button id="down-button" class="fa-solid fa-chevron-down"></button></div>
     <div class="cart-summary">
         <span class="cart-summary-total">Total:</span>
         <span class="cart-summary-price">0$</span>
